@@ -302,6 +302,45 @@ You can create individual blocks of operations by using a list under `operations
                 - 1900-01-01
         ```
 
+###### Mass Added At Update
+
+??? blank "`mass_added_at_update` - Updates the added at date of every item in the library.<a class="headerlink" href="#mass-added-at-update" title="Permanent link">¶</a>"
+
+    <div id="mass-added-at-update" />Updates every item's added at date in the library to the chosen site's date.
+
+    <hr style="margin: 0px;">
+    
+    **Attribute:** `mass_added_at_update`
+    
+    **Accepted Values:** Source or List of sources to use in that order
+    
+    <table class="clearTable">
+      <tr><td>`tmdb`</td><td>Use TMDb Release Date</td></tr>
+      <tr><td>`tvdb`</td><td>Use TVDb Release Date</td></tr>
+      <tr><td>`omdb`</td><td>Use IMDb Release Date through OMDb</td></tr>
+      <tr><td>`mdb`</td><td>Use MDBList Release Date</td></tr>
+      <tr><td>`mdb_digital`</td><td>Use MDBList Digital Release Date</td></tr>
+      <tr><td>`anidb`</td><td>Use AniDB Release Date</td></tr>
+      <tr><td>`mal`</td><td>Use MyAnimeList Release Date</td></tr>
+      <tr><td>`lock`</td><td>Lock Added At Field</td></tr>
+      <tr><td>`unlock`</td><td>Unlock Added At Field</td></tr>
+      <tr><td>`remove`</td><td>Remove Added At and Lock Field</td></tr>
+      <tr><td>`reset`</td><td>Remove Added At and Unlock Field</td></tr>
+      <tr><td colspan="2">Any String in the Format: YYYY-MM-DD for Added At (<code>2022-05-28</code>)</td></tr>
+    </table>                                                      
+
+    ???+ example "Example"
+
+        ```yaml
+        libraries:
+          TV Shows:
+            operations:
+              mass_added_at_update: 
+                - mdb_digital
+                - mdb
+                - 1900-01-01
+        ```
+
 ###### Mass Rating Update
 
 ??? blank "`mass_***_rating_update` - Updates the audience/critic/user rating of every item in the library.<a class="headerlink" href="#mass-star-rating-update" title="Permanent link">¶</a>"
